[package]
name = "tfrp"
version = "0.1.0"
authors = ["Jack Shih <i@kshih.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
tokio = {version="1.2", features=["full"]}
serde = {version="1.0", features=["derive"]}
bincode = "1.3"
toml = "0.5"
clap = "3.0.0-beta.2"
async-channel = "1.5"
async-trait = "0.1"


chrono = "0.4"
async-net = "1.5"
once_cell = "1.5"
parking_lot = "0.11"
ring = "0.16"
bytes = "1.0"
hyper = {version="0.14", features=["full"]}
headers = "0.3"
hyper-tls = "0.5"
tokio-tungstenite = "0.14"

[dev-dependencies]


[lib]
name = "tfrp"
path = "src/lib.rs"

[[bin]]
name = "tfrps"
path = "bin/server.rs"

[[bin]]
name = "tfrpc"
path = "bin/client.rs"
