[package]
name = "tfrp"
version = "0.1.0"
authors = ["Jack Shih <i@kshih.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nkypy/tfrp"

[features]
default = ["full"]
full = ["http","websocket"]
http = ["hyper", "hyper-tls"]
websocket = ["tokio-tungstenite"]


[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
futures = "0.3"
futures-util = "0.3"
tokio = {version="1", features=["full"]}
serde = {version="1", features=["derive"]}
bincode = "1"
toml = "0.7"
clap = "4.0.4"
async-channel = "2.0"
async-trait = "0.1"
anyhow = "1"
pin-project="1"


chrono = "0.4"
async-net = "1.5"
once_cell = "1.5"
parking_lot = "0.12"
ring = "0.16"
bytes = "1"
hyper = {version="1.0", features=["full"], optional=true}
headers = "0.3"
hyper-tls = {version="0.5", optional=true}
tokio-tungstenite = {version="0.20", optional=true}

[dev-dependencies]

[profile.release]
codegen-units = 1
incremental = false


[lib]
name = "tfrp"
path = "src/lib.rs"

[[bin]]
name = "tfrps"
path = "bin/tfrps.rs"

[[bin]]
name = "tfrpc"
path = "bin/tfrpc.rs"
